--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dogito-chatroom",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.2",
   "type": "module",
   "main": "electron/main.cjs",
   "scripts": {
@@ -11,6 +11,10 @@
     "preview": "vite preview",
     "electron:dev": "cross-env NODE_ENV=development concurrently \"npm run dev\" \"wait-on http://localhost:5173 && electron .\"",
     "electron:build": "vite build && electron-builder",
+    "electron:build:win": "vite build && electron-builder --win",
+    "electron:build:linux": "vite build && electron-builder --linux",
+    "electron:build:mac": "vite build && electron-builder --mac",
+    "electron:build:all": "vite build && electron-builder -mwl",
     "electron:preview": "electron-builder --dir",
     "publish": "electron-builder -p always"
   },
@@ -90,7 +94,8 @@
         "AppImage",
         "deb"
       ],
-      "category": "Network;Chat"
+      "category": "Network;Chat",
+      "icon": "public/icon.png"
     }
   }
 }
