--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dogito-chatroom",
   "private": true,
-  "version": "1.1.7",
+  "version": "1.1.8",
   "type": "module",
   "main": "electron/main.cjs",
   "scripts": {
@@ -32,6 +32,7 @@
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.21.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@types/react": "^19.0.10",
@@ -43,6 +44,7 @@
     "electron": "^35.1.4",
     "electron-builder": "^26.0.12",
     "eslint": "^9.21.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
