--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dogito-chatroom",
   "private": true,
-  "version": "1.2.9",
+  "version": "1.3.0",
   "type": "module",
   "main": "electron/main.cjs",
   "scripts": {
@@ -60,7 +60,8 @@
     "productName": "Dogito Chat",
     "files": [
       "dist/**/*",
-      "electron/**/*"
+      "electron/**/*",
+      "public/**/*"
     ],
     "directories": {
       "buildResources": "public",
@@ -72,6 +73,13 @@
         "owner": "DogitoMB2006",
         "repo": "dogito-chatroomeletrcon",
         "releaseType": "release"
+      }
+    ],
+    "extraResources": [
+      {
+        "from": "public",
+        "to": ".",
+        "filter": ["*.ico", "*.png"]
       }
     ],
     "win": {
@@ -98,7 +106,8 @@
       "target": [
         "dmg"
       ],
-      "category": "public.app-category.social-networking"
+      "category": "public.app-category.social-networking",
+      "icon": "public/icon.icns"
     },
     "linux": {
       "target": [
